dropshot/tests/fail/bad_trait_only21.stderr
error[E0308]: mismatched types
  --> tests/fail/bad_trait_only21.rs:11:1
   |
11 | / #[dropshot::api_description {
12 | |     tag_config = {
13 | |         policy = 2 + 2,
14 | |         tags = {},
15 | |     }
16 | | }]
   | |__^ expected `EndpointTagPolicy`, found integer
   |
   = note: this error originates in the attribute macro `dropshot::api_description` (in Nightly builds, run with -Z macro-backtrace for more info)
